# usage-tracker

./: LICENSE  README.md  deepsite.html  index.html  package-lock.json  package.json  prompt.txt
.github/workflows/: build.yml  release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  sand-clock.af  sand-clock.af~lock~
src-tauri/src/: config.rs  db.rs  lib.rs  tracker.rs
src/lib/: usage.svelte.ts
src/lib/components/: BreakPause.svelte  BreakReminder.svelte  SettingsDialog.svelte  UsageHeatmap.svelte
src/lib/components/ui/badge/: badge.svelte
