[package]
name = "app"
version = "1.0.0"
description = "A simple desktop application template combining Tauri 2 with Svelte 5 and shadcn-svelte with a basic ci/cd implemented."
authors = ["Alysonhower Veras Vieira"]
license = "MIT"
repository = "alysonhower/tauri2-svelte5-shadcn"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
thiserror = "2.0.12"
rusqlite = { version = "0.33.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Media_Control",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
